<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/note_picker_back"
    android:layout_height="fill_parent" >


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/love_note"
        android:padding="20dp"
        android:id="@+id/love"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:background="@color/love"
        android:textColor="@color/white"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/joke_note"
        android:id="@+id/joke"
        android:padding="20dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-light"
        android:background="@color/joke"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hate_note"
        android:textSize="20sp"
        android:padding="20dp"
        android:id="@+id/hate"
        android:fontFamily="sans-serif-light"
        android:background="@color/hatedark"
        android:textColor="@color/white"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confession_note"
        android:padding="20dp"
        android:textSize="20sp"
        android:id="@+id/conf"
        android:fontFamily="sans-serif-light"
        android:background="@color/confessiondark"
        android:textColor="@color/white"
        />

</LinearLayout>