<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="editor_fragment"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    tools:context="me.anikraj.campussecrets.views.Editor">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/backgroundimage"
        android:layout_height="match_parent"
        android:scaleType="matrix"/>

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/relativelayout"
        android:background="#66ff0000"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linear"
            android:padding="5dp"
            android:background="@color/lovedark"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/select_note"
                    android:contentDescription="@string/select_note"
                    android:focusable="true"
                    android:textColor="@color/white"
                    android:id="@+id/selectnotebutton"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymous"
                android:contentDescription="@string/anonymous"
                android:layout_gravity="center"
                android:focusable="true"
                android:textColor="@color/white"
                android:layout_weight="0"
                android:id="@+id/switch1"
                android:checked="true" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/linear"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">

            <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
                android:id="@+id/notetext"
                android:padding="16dp"
                android:inputType="textCapSentences|textMultiLine"
                android:textCursorDrawable="@null"
                android:layout_width="match_parent"
                android:focusable="true"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:background="@android:color/transparent"
                android:hint="@string/type_secrets_here"
                emojicon:emojiconSize="50sp"
                 />
        </ScrollView>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_tag_faces_black_36dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/smiley_button"
            android:focusable="true"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/emojibutton" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_photo_camera_black_36dp"
            android:contentDescription="@string/camera_button"
            android:id="@+id/camerabutton"
            android:focusable="true"
            android:background="@android:color/transparent"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/emojibutton"
            android:layout_toEndOf="@+id/emojibutton" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_insert_photo_black_36dp"
            android:contentDescription="@string/gallery_button"
            android:focusable="true"
            android:id="@+id/gallerybutton"
            android:background="@android:color/transparent"
            android:paddingBottom="16dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/camerabutton"
            android:layout_toEndOf="@+id/camerabutton" />
    </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
